@@ -40,24 +40,24 @@
 		<p>If you would like to operate your own tracker server, please let us know.</p>
 	
 		<ul>
-			<li><strong>Continuity</strong> operated by Paul Guyot and hosted by Bill Shamam<br />&nbsp;<br />
-			<!--<a href="http://npds-tracker.continuity.cx:3680/">http://npds-tracker.continuity.cx:3680/</a><br />
-			<a href="http://npds-tracker.continuity.cx:8080/">http://npds-tracker.continuity.cx:8080/</a> (Use if behind a firewall)-->
-			Temporarily offline.<br />&nbsp;<br /></li>
 			<li><strong>Misato</strong> operated by Victor Rehorst<br />
 			<a href="http://misato.chuma.org:3680/">http://misato.chuma.org:3680/</a><br />
 			<a href="http://misato.chuma.org:8080/">http://misato.chuma.org:8080/</a> (Use if behind a firewall)<br />
 			<a href="http://chuma.is-a-geek.org:3680/">http://chuma.is-a-geek.org:3680/</a><br />
 			<a href="http://chuma.is-a-geek.org:8080/">http://chuma.is-a-geek.org:8080/</a> (Use if behind a firewall)<br />&nbsp;<br /></li>
 			<li><strong>Newtontracker</strong> operated by David Schultz<br />
-			<a href="http://newtontracker.no-ip.org:3680/">http://newtontracker.no-ip.net:3680/</a><br />
-			<a href="http://newtontracker.no-ip.org:3680/">http://newtontracker.no-ip.org:3680/</a><br />&nbsp;<br /></li>
+			<a href="http://newtontracker.no-ip.org:3680/">http://newtontracker.no-ip.net:3680/</a><br />&nbsp;<br /></li>
+			<li><strong>Tek-Ed</strong> operated by Ed Kummel<br />
+			<a href="http://newton.tek-ed.com:3680/">http://newton.tek-ed.com:3680/</a><br />&nbsp;<br /></li>
 			<!--
+			<li><strong>Continuity</strong> operated by Paul Guyot and hosted by Bill Shamam<br />&nbsp;<br />
+			<a href="http://npds-tracker.continuity.cx:3680/">http://npds-tracker.continuity.cx:3680/</a><br />
+			<a href="http://npds-tracker.continuity.cx:8080/">http://npds-tracker.continuity.cx:8080/</a> (Use if behind a firewall)</li>
 			<li><strong>J3ff</strong> operated by Jeff Henry<br />
-			<a href="http://j3ff.dyndns.org:3680/">http://j3ff.dyndns.org:3680/</a><br />&nbsp;<br /></li>
+			<a href="http://j3ff.dyndns.org:3680/">http://j3ff.dyndns.org:3680/</a></li>
 			<li><strong>Xonxion</strong> operated by Manuel Probsthain<br />
 			<a href="http://npds-traq.xonxion.net:3680/">http://npds-traq.xonxion.net:3680/</a><br />
-			<a href="http://npds-traq.xonxion.net:8080/">http://npds-traq.xonxion.net:8080/</a> (Use if behind a firewall)<br />&nbsp;<br /></li>
+			<a href="http://npds-traq.xonxion.net:8080/">http://npds-traq.xonxion.net:8080/</a> (Use if behind a firewall)</li>
 			<li><strong>Mymacs</strong> operated by Dan Claessens<br />
 			<a href="http://www.mymacs.net:3680/">http://www.mymacs.net:3680/</a></li>
 			-->
